--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
   </head>
   <body>
     <div id="grids"></div>
+    <div class="head">Head 1</div>
+    <div class="head">Head 2</div>
+    <div class="head">Head 3</div>
+    <div class="head">Head 4</div>
   </body>
 </html>
