Fix div placement & add gaps to #grids

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <title>Etch-a-Sketchin'</title>
   </head>
   <body>
-    <div id="grids"></div>
+    <div id="grids">
     <div class="head">Head 1</div>
     <div class="head">Head 2</div>
     <div class="head">Head 3</div>
     <div class="head">Head 4</div>
+  </div>
   </body>
 </html>
