Change #grids properties

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <title>Etch-a-Sketchin'</title>
   </head>
   <body>
-    <div id="grids">
-      
-    </div>
+    <div id="grids"></div>
   </body>
 </html>
