Add container div

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Etch-a-Sketchin'</title>
   </head>
   <body>
-    <div id="grids"></div>
+    <div id="gridsContainer">
+      <div id="grids"></div>
+    </div>
   </body>
 </html>
