Create square divs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div id="gridsContainer">
-      <div id="grids"></div>
+      <div id="grids">
+        <div class="square"></div>
+      </div>
     </div>
   </body>
 </html>
