Add title and remove unnecessary JS/CSS

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   </head>
   <body>
     <div id="gridsContainer">
-      <div id="grids">
-        <div class="square"></div>
-      </div>
+      <div class="title"><h1>My Sketchpad!</div>
+      <div id="grids"></div>
     </div>
   </body>
 </html>
