Make square shape for sketchpad

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
   <body>
     <div id="gridsContainer">
       <div class="title"><h1>My Sketchpad!</div>
-      <div id="grids"></div>
+      <div class="content">
+        <div class="board"><div id="grids"></div></div>
+      <div class="buttons">
+        <button>Black</button>
+        <button>White</button>
+        <button>Random</button>
+        <button>Reset</button>
+      </div>
+    </div>
     </div>
   </body>
 </html>
