--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <div class="content">
         <div class="board"><div id="grids"></div></div>
       <div class="buttons">
-        <button>Black</button>
-        <button>White</button>
-        <button>Random</button>
+        <button id = "blackButton">Black</button>
+        <button id = "whiteButton">White</button>
+        <button id = "randomButton">Random</button>
         <button>Reset</button>
       </div>
     </div>
