--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="gridsContainer">
       <div class="title"><h1>My Sketchpad!</div>
       <div class="content">
-        <div class="topContent"><button id = "inputButton">How many squares per side do you want in a grid?</div>
+        <div class="topContent"><button id = "inputButton" onclick="inputButtonPrompt()">Input grid size</div>
         <div class="board"><div id="grids"></div></div>
       <div class="buttons">
         <button id = "blackButton">Black</button>
