Simplification by removing #grids, using board

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="title"><h1>My Sketchpad!</div>
       <div class="content">
         <div class="topContent"><button id = "inputButton" onclick="inputButtonPrompt()">Input grid size</div>
-        <div class="board"><div id="grids"></div></div>
+        <div class="board"></div>
       <div class="buttons">
         <button id = "blackButton">Black</button>
         <button id = "whiteButton">White</button>
