--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="gridsContainer">
       <div class="title"><h1>My Sketchpad!</div>
       <div class="content">
-        <div class="topContent"><button id = "inputButton" onclick="inputButtonPrompt()">Input grid size</div>
+        <div class="topContent"><button id = "inputButton" onclick="inputButtonPrompt()">Set grid size</div>
         <div class="board"></div>
       <div class="buttons">
         <button id = "blackButton">Black</button>
@@ -26,7 +26,7 @@
   <script>
     function inputButtonPrompt() {
       const inputButtonVar = prompt(
-  "How many squares per side do you want in a grid?"
+  "How many squares per side do you want in the grid?"
 );
         document
           .getElementById("inputButton")
