--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <div id="gridsContainer">
       <div class="title"><h1>My Sketchpad!</div>
       <div class="content">
-        <div class="topContent"><button id = "inputButton" onclick="inputButtonPrompt()">Set grid size</div>
+        <div class="topContent"><input
+          type="text"
+          placeholder="Grid size"
+          value="16"
+          onchange="changeSize(this.value)"
+        />
         <div class="board"></div>
       <div class="buttons">
         <button id = "blackButton">Black</button>
