--- a/index.html
+++ b/index.html
@@ -16,26 +16,28 @@
           type="text"
           placeholder="Grid size"
           value="16"
-          onchange="changeSize(this.value)"
+          onchange="changeGridSize()"
         />
         <div class="board"></div>
       <div class="buttons">
         <button id = "blackButton">Black</button>
         <button id = "whiteButton">White</button>
         <button id = "randomButton">Random</button>
-        <button>Reset</button>
+        <button id = "resetButton">Reset</button>
       </div>
     </div>
     </div>
   </body>
-  <script>
+  <!-- <script>
     function inputButtonPrompt() {
       const inputButtonVar = prompt(
   "How many squares per side do you want in the grid?"
 );
         document
-          .getElementById("inputButton")
+          .getElementById("content")
           .addEventListener("click", () => alert(inputButtonVar));
+
     }
-  </script>
+
+  </script> -->
 </html>
