Fix prompt handling

--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
     <div id="gridsContainer">
       <div class="title"><h1>My Sketchpad!</div>
       <div class="content">
-        <div class="topContent"><input
-          type="text"
-          placeholder="Grid size"
-          value="16"
-          onchange="changeGridSize()"
-        />
+
         <div class="board"></div>
+
       <div class="buttons">
         <button id = "blackButton">Black</button>
         <button id = "whiteButton">White</button>
         <button id = "randomButton">Random</button>
         <button id = "resetButton">Reset</button>
+        <button id = "inputButton" onclick="inputButtonPrompt()">Grid Size</button>
       </div>
     </div>
     </div>
