--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="gridsContainer">
       <div class="title"><h1>My Sketchpad!</div>
       <div class="content">
-        <button id = "inputButton" onclick="inputButtonPrompt()">Grid Size</button>
+        <button id = "inputButton">Grid Size</button>
         <div class="board"></div>
 
       <div class="buttons">
