--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
   </head>
   <body>
     <div id="gridsContainer">
-      <div class="title"><h1>My Sketchpad!</div>
+      <div class="title"><h1>Sketchpad</div>
       <div class="content">
         <button id = "inputButton">Grid Size</button>
         <div class="board"></div>
 
       <div class="buttons">
-        <button id = "blackButton">Black</button>
-        <button id = "whiteButton">White</button>
         <button id = "randomButton">Random</button>
         <button id = "resetButton">Reset</button>
       </div>
