Format grid size button and resize sketchpad

--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="main.js" defer></script>
-    <title>Etch-a-Sketchin'</title>
-  </head>
-  <body>
-    <div id="gridsContainer">
-      <div class="title"><h1>Sketchpad</div>
-      <div class="content">
-        <button id = "inputButton">Grid Size</button>
-        <div class="board"></div>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="main.js" defer></script>
+  <title>Etch-a-Sketchin'</title>
+</head>
+
+<body>
+  <div id="gridsContainer">
+    <div class="title">
+      <h1>Sketchpad
+    </div>
+    <div class="upper"><button id="inputButton">Grid Size</button></div>
+    <div class="content">
+      <div class="board"></div>
       <div class="buttons">
-        <button id = "randomButton">Random</button>
-        <button id = "resetButton">Reset</button>
+        <button id="randomButton">Random</button>
+        <button id="resetButton">Reset</button>
       </div>
     </div>
-    </div>
-  </body>
+  </div>
+</body>
+
 </html>
